// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat log agent attachment 1`] = `
.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="nameNoAvatar"
      >
        Agent McAgent
      </div>
      <div
        class="wrapper"
      >
        <div
          class="message messageAgent"
        >
          <div>
            ImageMessage
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
  />
</div>
`;

exports[`chat log agent join 1`] = `
.c1 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Agent McAgent joined the chat
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`chat log agent member leave with disconnection reason 1`] = `
.c1 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Mugen joined the chat
    </div>
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Mugen was disconnected and has left the chat
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`chat log agent member leave with non-disconnection reason 1`] = `
.c1 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Mugen joined the chat
    </div>
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Mugen left the chat
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`chat log agent message 1`] = `
.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #e9ebed;
  max-width: 15.642857142857142rem !important;
}

.c3 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="nameNoAvatar"
      >
        Random display name
      </div>
      <div
        class="wrapper"
      >
        <div
          class="message messageAgent"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              class="c1"
              data-testid="chat-msg-agent"
            >
              <div
                class="c2"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    blah blah
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c3"
  />
</div>
`;

exports[`chat log agent stopped typing 1`] = `
.c1 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Mr F joined the chat
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`chat log agent typing 1`] = `
.c1 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c4 {
  color: inherit;
}

.c4 .c5 {
  opacity: 0.2;
}

.c4 .c5:nth-child(1) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.4s;
  animation-delay: 0.4s;
}

.c4 .c5:nth-child(2) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c4 .c5:nth-child(3) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: unset;
  animation-delay: unset;
}

.c3 {
  color: #87929d !important;
  vertical-align: middle;
  height: 1.4rem !important;
  width: 1.4rem !important;
  padding-bottom: 0.14285714285714285rem;
  margin-right: 0.35714285714285715rem;
}

.c2 {
  width: 100%;
  padding-top: 0.8571428571428571rem;
  padding-bottom: 0.42857142857142855rem;
  color: #68737d;
}

.c6 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Mr F joined the chat
    </div>
  </div>
  <div
    aria-live="polite"
  >
    <div
      class="c2"
    >
      <svg
        class="c3 c4"
        color="inherit"
        data-garden-id="loaders.inline"
        data-garden-version="8.17.0"
        data-testid="Icon--ellipsis"
        height="4"
        size="16"
        viewBox="0 0 16 4"
        width="16"
      >
        <circle
          class="c5 "
          cx="14"
          cy="2"
          fill="currentColor"
          r="2"
        />
        <circle
          class="c5 "
          cx="8"
          cy="2"
          fill="currentColor"
          r="2"
        />
        <circle
          class="c5 "
          cx="2"
          cy="2"
          fill="currentColor"
          r="2"
        />
      </svg>
      Mr F is typing
    </div>
  </div>
  <div
    class="c6"
  />
</div>
`;

exports[`chat log comment 1`] = `
.c1 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Comment submitted
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`chat log member join 1`] = `
.c1 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Chat started
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`chat log member leave 1`] = `
.c1 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Mugen joined the chat
    </div>
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Mugen left the chat
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`chat log queue position 1`] = `
.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c1 {
  text-align: center !important;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    class="c1"
    role="status"
  >
    Queue position: 3
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`chat log rating 1`] = `
.c1 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Chat rated Good
    </div>
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`chat log series of actions 1`] = `
.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #17494D !important;
}

.c3,
.c3 a {
  color: #FFFFFF !important;
}

.c4 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #e9ebed;
  max-width: 15.642857142857142rem !important;
}

.c1 {
  text-align: center;
  margin-top: 0.35714285714285715rem;
  margin-bottom: 0.7142857142857143rem;
  color: #68737d;
}

.c5 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Chat started
    </div>
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <span
              class="container sentIndicator Icon--mini-tick"
              data-testid="Icon--mini-tick"
              type="Icon--mini-tick"
            >
              <svg
                aria-hidden="true"
                realfilename="check-sm-stroke.svg"
              />
            </span>
            <div
              class="c2"
              data-testid="chat-msg-user"
            >
              <div
                class="c3"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    Hi
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Jet joined the chat
    </div>
    <div
      class="container"
    >
      <div
        class="nameNoAvatar"
      >
        Jet
      </div>
      <div
        class="wrapper"
      >
        <div
          class="message messageAgent"
        >
          <div>
            ImageMessage
          </div>
        </div>
      </div>
      <div
        class="wrapper"
      >
        <div
          class="message messageAgent"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              class="c2"
              data-testid="chat-msg-agent"
            >
              <div
                class="c4"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    blah blah
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Chat rated Good
    </div>
    <div
      class="c1"
      data-testid="chat-msg-event"
    >
      Jet left the chat
    </div>
  </div>
  <div
    class="c5"
  />
</div>
`;

exports[`chat log visitor message account settings login enabled displays update info if visitor info is not available 1`] = `
.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #17494D !important;
}

.c2,
.c2 a {
  color: #FFFFFF !important;
}

.c3 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              class="c1"
              data-testid="chat-msg-user"
            >
              <div
                class="c2"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    Hi
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="updateInfo"
      >
        Please update your info
      </button>
    </div>
  </div>
  <div
    class="c3"
  />
</div>
`;

exports[`chat log visitor message account settings login enabled displays update info if visitor name is default 1`] = `
.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #17494D !important;
}

.c2,
.c2 a {
  color: #FFFFFF !important;
}

.c3 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              class="c1"
              data-testid="chat-msg-user"
            >
              <div
                class="c2"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    Hi
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="updateInfo"
      >
        Please update your info
      </button>
    </div>
  </div>
  <div
    class="c3"
  />
</div>
`;

exports[`chat log visitor message account settings login enabled does not display update info if visitor email is already set 1`] = `
.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #17494D !important;
}

.c2,
.c2 a {
  color: #FFFFFF !important;
}

.c3 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              class="c1"
              data-testid="chat-msg-user"
            >
              <div
                class="c2"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    Hi
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c3"
  />
</div>
`;

exports[`chat log visitor message account settings login enabled does not display update info if visitor name is already set 1`] = `
.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #17494D !important;
}

.c2,
.c2 a {
  color: #FFFFFF !important;
}

.c3 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <div
              class="c1"
              data-testid="chat-msg-user"
            >
              <div
                class="c2"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    Hi
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c3"
  />
</div>
`;

exports[`chat log visitor message failure 1`] = `
.c4 {
  position: relative;
  border: 1px solid;
  border-radius: 4px;
  padding: 20px 40px 20px 50px;
  line-height: 1.4285714285714286;
  font-size: 14px;
  border-color: #f5b5ba;
  background-color: #fff0f1;
  color: #8c232c;
}

.c4 .c8 {
  color: #681219;
}

.c5 {
  position: absolute;
  left: 24px;
  margin-top: 2px;
  color: #cc3340;
}

.c3 {
  margin-bottom: $spacing-tny;
  display: inline-block;
  float: right;
}

.c3.c3.c3 {
  background-color: transparent;
  color: #d93f4c;
  background-position: 1rem 0.21428571428571427rem;
  border: none;
  font-size: 1rem;
  padding-bottom: 0.8571428571428571rem;
  padding-top: 0;
  background-size: 1rem;
  padding-right: 0rem;
  padding-left: 3rem;
}

.c6 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  padding: 0;
  color: #d93f4c;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  line-height: 1.2857142857142858rem;
  max-width: calc( 14.428571428571429rem - 1.3571428571428572rem );
}

.c6:hover,
.c6:focus,
.c6:active {
  color: #d93f4c;
}

.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #17494D !important;
}

.c2,
.c2 a {
  color: #FFFFFF !important;
}

.c7 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div>
            <div
              class="c1"
              data-testid="chat-msg-user"
            >
              <div
                class="c2"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    Hi
                  </span>
                </span>
              </div>
            </div>
            <div
              class="c3 c4"
              data-garden-id="notifications.alert"
              data-garden-version="8.17.1"
              role="alert"
              type="error"
            >
              <svg
                class="c5"
                focusable="false"
                height="16"
                hue="dangerHue"
                role="presentation"
                theme="[object Object]"
                viewBox="0 0 16 16"
                width="16"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                >
                  <circle
                    cx="7.5"
                    cy="8.5"
                    r="7"
                  />
                  <path
                    d="M7.5 4.5V9"
                    stroke-linecap="round"
                  />
                </g>
                <circle
                  cx="7.5"
                  cy="12"
                  fill="currentColor"
                  r="1"
                />
              </svg>
              <button
                class="c6"
              >
                Resend
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c7"
  />
</div>
`;

exports[`chat log visitor message success 1`] = `
.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: inline-block;
  white-space: pre-wrap;
  word-wrap: break-word !important;
  border-radius: 1.1428571428571428rem;
  line-height: 1.1428571428571428rem;
  padding: 0.5714285714285714rem 0.8571428571428571rem;
  max-width: 17.5rem;
  background-color: #17494D !important;
}

.c2,
.c2 a {
  color: #FFFFFF !important;
}

.c3 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 8.571428571428571rem;
  left: 0;
  right: 0;
}

.c0 {
  min-height: calc(100% - calc(2.142857142857143rem + 6px));
}

<div
  class="c0"
  data-testid="chat-log"
>
  <div
    aria-live="polite"
    role="log"
  >
    <div
      class="container"
    >
      <div
        class="wrapper"
      >
        <div
          class="message messageUser"
        >
          <div
            class="defaultMessageContainer"
          >
            <span
              class="container sentIndicator Icon--mini-tick"
              data-testid="Icon--mini-tick"
              type="Icon--mini-tick"
            >
              <svg
                aria-hidden="true"
                realfilename="check-sm-stroke.svg"
              />
            </span>
            <div
              class="c1"
              data-testid="chat-msg-user"
            >
              <div
                class="c2"
              >
                <span
                  class=""
                >
                  <span
                    class="Linkify"
                  >
                    Hi
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c3"
  />
</div>
`;

exports[`update chat header 1`] = `
.c5 {
  display: inline-block;
  box-sizing: border-box;
  text-align: left;
  font-weight: 400;
  margin: 6px;
  border-radius: 4px;
  padding: 1em;
  max-width: 140px;
  line-height: 1.3333333333333333;
  word-wrap: break-word;
  white-space: normal;
  font-size: 12px;
  overflow-wrap: break-word;
  position: relative;
  box-shadow: 0 4px 8px 0 rgba(23,73,77,0.15);
  background-color: #03363d;
  color: #fff;
}

.c5::before {
  border-width: inherit;
  border-style: inherit;
  border-color: transparent;
  background-clip: content-box;
}

.c5::after {
  z-index: -1;
  border: inherit;
  box-shadow: inherit;
}

.c5::before,
.c5::after {
  position: absolute;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  background-color: inherit;
  box-sizing: inherit;
  width: 8.48528137423857px;
  height: 8.48528137423857px;
  content: '';
}

.c5::before {
  border-bottom-right-radius: 100%;
  -webkit-clip-path: polygon(100% 0,100% 1px,1px 100%,0 100%,0 0);
  clip-path: polygon(100% 0,100% 1px,1px 100%,0 100%,0 0);
}

.c5::before,
.c5::after {
  top: -3.2426406871192848px;
  left: 50%;
  margin-left: -4.242640687119285px;
}

.c5[aria-hidden='true'] {
  display: none;
}

.c4 {
  -webkit-transition: opacity 10ms;
  transition: opacity 10ms;
  opacity: 1;
}

.c4[aria-hidden='true'] {
  visibility: hidden;
  opacity: 0;
}

.c0 {
  color: #2f3941;
  line-height: 1.1428571428571428rem;
  padding-top: 0.07142857142857142rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  padding-left: 12px;
}

.c2 > div {
  display: block;
}

.c1 {
  font-weight: 700;
  font-size: 1rem;
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c3 {
  width: 100%;
  margin-top: 0.07142857142857142rem;
  overflow: hidden;
  display: -webkit-box;
  text-overflow: ellipsis;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
}

<div
  class="c0"
  data-testid="chat-header-text-container"
>
  <h2
    class="c1"
    data-testid="chat-header-title"
  >
    Mr F
  </h2>
  <div
    class="c2"
  >
    <div
      aria-describedby="1096val-tooltip_0.5.5"
      class="c3"
      data-garden-container-id="containers.tooltip"
      data-garden-container-version="0.5.5"
      data-testid="chat-header-subtext"
      tabindex="-1"
    >
      Mistah J
    </div>
    <div
      aria-hidden="true"
      class="c4"
      style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
    >
      <div
        aria-hidden="true"
        class="c5"
        data-garden-id="tooltip.tooltip"
        data-garden-version="8.21.0"
        id="1096val-tooltip_0.5.5"
        role="tooltip"
        style="display: block;"
        type="dark"
      >
        Mistah J
      </div>
    </div>
  </div>
</div>
`;
